week4: fixing color contrast on semi-transparent

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -4,7 +4,7 @@
     --accent1-color: #83c5be;
     --accent2-color: #ffddd2;
     --subtle-color: #edf6f9;
-    --primary-trans-color: rgba(0, 109, 119, 0.5);
+    --primary-trans-color: rgba(0, 109, 119, 0.8);
 }
 
 * {
